# ILS-PRVP

./: .gitignore  Busca_local.cpp  Busca_local.h  CMakeLists.txt  Caminho.cpp  Caminho.h  Instance.cpp  Instance.h  LocalSearch.cpp  LocalSearch.h  Makefile  Perturbacao.cpp  Perturbacao.h  Perturbation.cpp  Perturbation.h  Route.cpp  Route.h  Sol.cpp  Sol.h  Solution.cpp  Solution.h  Trocas  Utils.cpp  Utils.h  callgrind.out  callgrind.out.8075  callgrind.out.my_run  local_search_patrulhamento.cpp  main  main.cpp  my_program  my_program_valgrind  output_jatiuca.txt  output_royal.txt  output_teste.txt  resultados.csv  resultados.txt  resultados_107_1_360_120_20.txt  resultados_16_1_360_180_20.txt  resultados_47_5_360_120_20_teste.txt  (+2 more)
Instancias/: 107_10_360_120_20.txt  146_10_360_120_20.txt  146_1_360_120_20.txt  146_2_360_120_20.txt  146_5_360_120_20.txt  146_7_360_120_20.txt  47_10_360_120_20.txt  47_5_360_120_20_teste.txt  51_10_360_120_20.txt  51_1_360_120_20.txt  51_2_360_120_20.txt  51_5_360_120_20.txt  51_7_360_120_20.txt  input18.txt  teste.json
resultados/: output_107_2_360_120_5.txt
resultados/Resultados Cond 15-2/: resultados_107_10_360_120_20.txt  resultados_107_1_360_120_20.txt  resultados_107_2_360_120_20.txt  resultados_107_5_360_120_20.txt  resultados_107_7_360_120_20.txt  resultados_10_1_360_120_20.txt  resultados_10_1_360_180_20.txt  resultados_10_1_360_360_20.txt  resultados_10_1_360_90_20.txt  resultados_146_10_360_120_20.txt  resultados_146_1_360_120_20.txt  resultados_146_2_360_120_20.txt  resultados_146_5_360_120_20.txt  resultados_cond_15.csv  (+19 more)
(+86 files in other folders)
